@@ -11,8 +11,8 @@ class SalePraise(models.Model):
 
     class Meta:
         db_table = 'supplier_sale_product_praise'
-        verbose_name = u'代理选品点赞表'
-        verbose_name_plural = u'代理选品点赞表列表'
+        verbose_name = u'特卖/选品投票表'
+        verbose_name_plural = u'特卖/选品投票列表'
         unique_together = ("sale_id", "cus_id")
 
     def __unicode__(self):
